--- a/FrontEndDevelopement/JS/Advance of JS/Arrays in JS/index.html
+++ b/FrontEndDevelopement/JS/Advance of JS/Arrays in JS/index.html
@@ -1,15 +1,16 @@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OOPs</title>
+    <title>Advanced Array</title>
 </head>
 
 <body>
-    <h2>This page show the OOPs concepts in JS.</h2>
-    <script src="Functions and Methods/constructorFn.js"></script>
+    <h2>This page will give us how the array works? What are uses of array?</h2>
+    <script src="IteratingToElements.js"></script>
 </body>
 
 </html>
